A bit more work toward better table and csv loading.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,10 +48,12 @@ else()
     )
 
     set(QT_WRAP
+        include/QSeaCoreTableModel.h
         include/MainWindow.h
     )
 
     set(CXX_FILES
+        src/QSeaCoreTableModel.cxx
         src/MainWindow.cxx
         src/main.cxx
     )
